@@ -1,6 +1,11 @@
 # ChangeLog for media-video/codeine
-# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/codeine/Attic/ChangeLog,v 1.7 2005/09/06 02:20:56 cryos Exp $
+# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-video/codeine/Attic/ChangeLog,v 1.8 2006/03/02 15:56:02 flameeyes Exp $
+
+  02 Mar 2006; Diego Pettenò <flameeyes@gentoo.org>
+  -codeine-1.0_beta2.ebuild, -codeine-1.0_beta3.ebuild,
+  -codeine-1.0_rc1.ebuild:
+  Drop beta and rc versions.
 
 *codeine-1.0 (06 Sep 2005)
 
